res/examples/invalid/call_non_callable_bool_with_additional_calls.eg
true()()();

// out: TypeError: unknown is not callable
// out: TypeError: bool is not callable
// out: TypeError: unknown is not callable